fixed click bleed issue with expanding results on dashboard

--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -87,6 +87,11 @@
   .skip {
     fill: $result-skip;
   }
+
+  .warning {
+    color: $result-warning;
+  }
+ 
   .dash-row{
     padding-top: 8px;
     .server-name a{
